Refactor preference service and exception handling